# Agentic-AI-Engenering

00_Intro/: readme.md
01_Roadmap/: readme.md
02-litellm/litellm_project/: pyproject.toml
02-litellm/litellm_project/src/litellm_project/: stream.py  text.py
03-crewai/1-crewai-intro/: README.md
03-crewai/my_project_flow/: poem.txt  pyproject.toml
03-crewai/my_project_flow/src/my_project_flow/: main.py
