[project]
name = "my_project_flow"
version = "0.1.0"
description = "my_project_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
]

[project.scripts]
kickoff = "my_project_flow.main:kickoff"
plot = "my_project_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
